[project]
name = "rye-tempy"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "RyushiAok", email = "55625375+RyushiAok@users.noreply.github.com" },
]
dependencies = ["torch>=2.0.1", "torchaudio>=2.0.2", "torchvision>=0.15.2"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.rye.sources]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
type = "index"


[[tool.rye.sources]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
type = "index"


[tool.rye]
managed = true
dev-dependencies = [
    "black~=23.3.0",
    "mypy~=1.3.0",
    "isort~=5.12.0",
    "flake8~=5.0.4",
    "pyproject-flake8~=5.0.4.post1",
    "flake8-isort~=6.0.0",
    "flake8-bugbear~=23.3.12",
    "flake8-unused-arguments~=0.0.13",
    "flake8-pytest-style~=1.7.2",
    "pep8-naming~=0.13.3",
    "pytest~=7.3.1",
    "setuptools~=67.8.0",
    "pre-commit~=3.3.2",
]

[tool.rye.scripts]
main = "python src/main.py"
lint = { chain = ["lint:black", "lint:isort", "lint:flake8"] }
"lint:black" = "black --check src tests"
"lint:isort" = "isort --check-only src tests"
"lint:flake8" = "flake8 src tests"
format = "black src tests"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".git", "__pycache__"]
max-complexity = 10

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
