[project]
name = "rye-tempy"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "RyushiAok", email = "55625375+RyushiAok@users.noreply.github.com" },
]
dependencies = ["torch>=2.2.1", "numpy>=1.26.4"]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
hello = "rye_tempy:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.rye.sources]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
type = "index"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.2.2", "pytest~=7.3.1"]

[tool.rye.scripts]
main = "python src/main.py"
test = "pytest"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/rye_tempy"]
